--- a/marketing/Desafio4 (1).ipynb
+++ b/marketing/Desafio4 (1).ipynb
@@ -64,7 +64,7 @@
         "`df.head( )`\n",
         "`df.describe( )`\n",
         "`df.info( )`\n",
-        "Para analisar estatitiscamente melhor os dados"
+        "Para analisar estatisticamente melhor os dados"
       ],
       "metadata": {
         "id": "LvdQKbPHxKdH"
