--- a/client_cluster/RID1234_Desafio07.ipynb
+++ b/client_cluster/RID1234_Desafio07.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Desafio 7"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
